--- a/src/index.html
+++ b/src/index.html
@@ -1,18 +1,35 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <title>HTML, CSS and SASS Boilerplate</title>
-    <meta
-      name="description"
-      content="Used as a boilerplate for tasks in the 'HTML, CSS and SASS' course in boom.dev"
-    />
-    <meta name="viewport" content="width=device-width, initial-scale=1" />
-  </head>
-  <body>
-    <div class="main">
-      <div class="emoji mb-6">💣🤯💥</div>
-      <button class="button">Boom?</button>
-    </div>
-  </body>
+	<head>
+		<meta charset="UTF-8" />
+		<title>HTML, CSS and SASS Boilerplate</title>
+		<meta
+			name="description"
+			content="Used as a boilerplate for tasks in the 'HTML, CSS and SASS' course in boom.dev"
+		/>
+		<meta name="viewport" content="width=device-width, initial-scale=1" />
+		<link
+			rel="stylesheet"
+			href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css"
+			integrity="sha512-1ycn6IcaQQ40/MKBW2W4Rhis/DbILU74C1vSrLJxCq57o941Ym01SwNsOMqvEBFlcgUa6xLiPY/NS5R+E6ztJQ=="
+			crossorigin="anonymous"
+			referrerpolicy="no-referrer"
+		/>
+		<style>
+			@media screen and (max-width: 600px) {
+				.navbar-menu {
+					display: none;
+				}
+			}
+			@media screen and (min-width: 600px) {
+				.navbar-burger {
+					display: none;
+				}
+			}
+		</style>
+	</head>
+	<body>
+		<div class="navbar-menu">navbar</div>
+		<div class="navbar-burger"><i class="fas fa-bars"></i></div>
+	</body>
 </html>
